unpackaged/objects/Pricebook2.object
<CustomObject>
  <fields>
    <fullName>Apply_contract_discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check in case discount contracts are used in order to prefill discounts for the customer</inlineHelpText>
    <label>Apply contract discounts if available</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Automatically_Apply_Discount_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Apply Discount (OM)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CompanyCode__c</fullName>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contract_Discount_types__c</fullName>
    <label>Contract Discount types</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Contract_Discount_Type</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>ConversionRate__c</fullName>
    <description>Used for Turkey to handle conversion from TRY to EUR in order email templates etc</description>
    <label>Conversion rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Email__c</fullName>
    <label>Customer Service Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Samples_Email__c</fullName>
    <label>Customer Service Samples Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Direct_orders_Show_FOC_field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Direct orders: Show FOC field</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Direct_orders_Show_discount_field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Direct orders: Show discount field</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Direct_orders_Show_prices__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Direct orders: Show prices</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Discount_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Model</label>
    <referenceTo>Discount_model__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dummy_Field__c</fullName>
    <label>Dummy Field</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Header_Order__c</fullName>
    <description>Header for the order doc</description>
    <label>Header Order</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Indirect_orders_Show_FOC_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect orders: Show FOC field</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Indirect_orders_Show_discount_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect orders: Show discount field</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Indirect_orders_Show_prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect orders: Show prices</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <description>&lt;ADMINISTRATION&gt; Keep the values of this field aligned with the UserMarket field values.</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>BeNelux</fullName>
        </value>
        <value>
          <fullName>BEX</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>CEE</fullName>
        </value>
        <value>
          <fullName>China</fullName>
        </value>
        <value>
          <fullName>DEX</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ</fullName>
        </value>
        <value>
          <fullName>Iberia</fullName>
        </value>
        <value>
          <fullName>India</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Kazakhstan</fullName>
        </value>
        <value>
          <fullName>Korea</fullName>
        </value>
        <value>
          <fullName>Malaysia</fullName>
        </value>
        <value>
          <fullName>MEA</fullName>
        </value>
        <value>
          <fullName>NA</fullName>
        </value>
        <value>
          <fullName>Nordics</fullName>
        </value>
        <value>
          <fullName>Poland</fullName>
        </value>
        <value>
          <fullName>Russia</fullName>
        </value>
        <value>
          <fullName>Singapore</fullName>
        </value>
        <value>
          <fullName>South Africa</fullName>
        </value>
        <value>
          <fullName>Switzerland</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>No_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Contract</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Not_Show_prices_to_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not to show prices to dealer</description>
    <label>Not Show prices to Dealer</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Not_show_foc_dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not to show free of charge product to dealer that are given to teh customer by teh DS customer service or by teh sales rep</description>
    <label>Not Show FOC not given by Dealer</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ObjectTypeUseOM__c</fullName>
    <label>Object Type Use(OM)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Order</fullName>
        </value>
        <value>
          <fullName>Opportunity</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Order_Quote_Comments__c</fullName>
    <label>Order Quote Comments</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Order_pdf_comments__c</fullName>
    <label>Order pdf comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>PriceBook_Type__c</fullName>
    <label>PriceBook Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Free Goods Order</fullName>
        </value>
        <value>
          <fullName>Telesales</fullName>
        </value>
        <value>
          <fullName>Discount on Demand</fullName>
        </value>
        <value>
          <fullName>PREP</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Pricebook_Channel__c</fullName>
    <label>Pricebook Channel</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Direct</fullName>
        </value>
        <value>
          <fullName>Indirect</fullName>
        </value>
        <value>
          <fullName>Generic</fullName>
        </value>
        <value>
          <fullName>Free Good Order</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Pricebook_General_Discount__c</fullName>
    <inlineHelpText>Pricebook general discount for the Order</inlineHelpText>
    <label>Pricebook General Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Pricebook_Subtype__c</fullName>
    <label>Pricebook Subtype</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>PriceBook_Type__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Telesales</fullName>
        </value>
        <value>
          <fullName>Austenal</fullName>
        </value>
        <value>
          <fullName>Ceramco</fullName>
        </value>
        <value>
          <fullName>Institutional</fullName>
        </value>
        <value>
          <fullName>Midwest</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Austenal &amp; Trubyte</fullName>
        </value>
        <value>
          <fullName>Offers</fullName>
        </value>
        <value>
          <fullName>Standard</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ShowPricingfromMicroServiceOM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Pricing from Micro-Service (OM)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Show_Description_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Description (OM)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Show_Discount_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Discount (OM)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Show_FOC_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show FOC (OM)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Show_OfferCode_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show OfferCode (OM)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Show_Price_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Price (OM)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SourceId__c</fullName>
    <label>Source Id</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>1</fullName>
          <label>M3</label>
        </value>
        <value>
          <fullName>2</fullName>
          <label>AX</label>
        </value>
        <value>
          <fullName>7</fullName>
          <label>BPCS</label>
        </value>
        <value>
          <fullName>31</fullName>
          <label>SAP</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Type_of_Price__c</fullName>
    <label>Type of Price</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Retail Price</fullName>
        </value>
        <value>
          <fullName>Wholesale Price</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <listViews>
    <fullName>All_Active_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>Direct_orders_Show_discount_field__c</columns>
    <columns>Direct_orders_Show_prices__c</columns>
    <columns>Indirect_orders_Show_discount_field__c</columns>
    <columns>Indirect_orders_Show_prices__c</columns>
    <columns>Market__c</columns>
    <columns>Pricebook_Subtype__c</columns>
    <columns>Pricebook_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>PRICEBOOK2.IS_ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>All Active Pricebooks</label>
  </listViews>
  <listViews>
    <fullName>All_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>Direct_orders_Show_discount_field__c</columns>
    <columns>Direct_orders_Show_prices__c</columns>
    <columns>Indirect_orders_Show_discount_field__c</columns>
    <columns>Indirect_orders_Show_prices__c</columns>
    <columns>Market__c</columns>
    <columns>Pricebook_Subtype__c</columns>
    <columns>Pricebook_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pricebooks</label>
  </listViews>
  <sharingModel>Private</sharingModel>
  <validationRules>
    <fullName>Not_Direct_Pricing_Microservice_request</fullName>
    <active>true</active>
    <errorConditionFormula>ShowPricingfromMicroServiceOM__c = true &amp;&amp; text(Pricebook_Channel__c) &lt;&gt; 'Direct'</errorConditionFormula>
    <errorMessage>Only direct pricebooks support pricing microservice</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Only_allow_users_to_edit_own_currency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Market__c)&lt;&gt; TEXT(  $User.Market__c  ) , TEXT(Market__c)&lt;&gt; TEXT( $User.User_Country__c ) ,$User.Profile__c &lt;&gt; "#System: System Administrator", $User.Id &lt;&gt; "00520000001CBYl",$User.Profile__c &lt;&gt; "#System: OrgFlow")
/*profile name updated*/</errorConditionFormula>
    <errorMessage>You can't edit a price book that is not connected to your market</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Pricing_Microservice_request</fullName>
    <active>true</active>
    <errorConditionFormula>ShowPricingfromMicroServiceOM__c = true &amp;&amp; ( ISBLANK(CompanyCode__c) || ISBLANK(text(SourceId__c)) )</errorConditionFormula>
    <errorMessage>For pricing microservice request you need to fill Company Code and Source Id fields</errorMessage>
  </validationRules>
</CustomObject>